test_scores/negative_dimers/features/P61421.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P61421.pkl.xz